Add support for Scala 2.13 and drop support for 2.10